style/main.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Red Hat Display", sans-serif !important;
  color: #fff;
  text-align: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  background-attachment: fixed;
  height: 100%;
  width: 100%;
}

.content {
  margin: 0 auto;
  text-align: center;
  width: fit-content;
  padding: 0rem 2rem;
}

.title {
  padding: 8% 0;
  text-transform: capitalize;
  font-size: 6vh;
  font-weight: 700;
  text-align: left;
}

.table {
  backdrop-filter: blur(8px);
  text-transform: capitalize;
  border-radius: 50px;
  font-size: 2.9vh !important;
  text-align: left;
  margin: auto;
  min-width: 70vw;
}

ul {
  list-style: none;
}
li {
  font-weight: 500;
  padding: 1rem 3rem;
}

a {
  text-decoration: none;
  color: inherit;
}

a:visited {
  color: inherit;
}

a:hover {
  cursor: pointer;
  color: rgb(0, 0, 0, 0.4);
}

hr {
  opacity: 0.4;
}

.footer {
  padding: 5% 0;
  font-size: 3vh;
  font-weight: 900;
  text-transform: uppercase;
}

/* screen larger than 500 px */
@media (min-width: 500px) {
  .title {
    text-align: center;
  }
}

/* screen larger than 1100 px */
@media (min-width: 1100px) {
  .table {
    min-width: 35vw;
  }
}

/* screen smaller than 370 px */
@media (max-width: 370px) {
  .table {
    font-size: 22pt !important;
  }
  li {
    padding: 2rem 3rem;
  }
  .footer {
    font-size: 25pt;
    padding: 2rem 0;
  }
  .title {
    font-size: 35pt;
    padding: 3rem 0;
  }
}

